syntax = "proto3";

option go_package = "github.com/elap5e/penguin/daemon/service/pb";

// Message generated by proto-message-gen. DO NOT EDIT.
// source: tencent.p1298im.mobileqq.configpush.DomainIp
//
// DomainIp is the message type for the DomainIp.
message DomainIp {
  // NameReqBody is the message type for the NameReqBody.
  message NameReqBody {
    SubCmd_name_Req SubCmd_name_Req = 1; // SubCmd_name_Req
  }
  // NameRspBody is the message type for the NameRspBody.
  message NameRspBody {
    SubCmd_name_Rsp SubCmd_name_Rsp = 1; // SubCmd_name_Rsp
  }
  // ServerList is the message type for the ServerList.
  message ServerList {
    string IP   = 1; // string_IP
    uint32 Port = 2; // uint32_Port
  }
  // SubCmd_name_Req is the message type for the SubCmd_name_Req.
  message SubCmd_name_Req {
    uint32 uip                   = 1; // uint32_uip
    uint32 qq                    = 2; // uint32_qq
    repeated dnameInfo dnameInfo = 3; // dnameInfo
  }
  // SubCmd_name_Rsp is the message type for the SubCmd_name_Rsp.
  message SubCmd_name_Rsp {
    uint32 uip                       = 1; // uint32_uip
    uint32 qq                        = 2; // uint32_qq
    repeated iplistInfo iplistInfo   = 3; // iplistInfo
    repeated iplistInfo iplistInfoV6 = 4; // iplistInfoV6
  }
  // dnameInfo is the message type for the dnameInfo.
  message dnameInfo {
    string dname = 2; // string_dname
    uint32 type  = 3; // uint32_type
  }
  // iplistInfo is the message type for the iplistInfo.
  message iplistInfo {
    int32 result                        = 1; // int32_result
    string dname                        = 2; // string_dname
    uint32 type                         = 3; // uint32_type
    uint32 ttl                          = 4; // uint32_ttl
    repeated ServerList ServerList_data = 5; // ServerList_data
  }
}
